[package]
name = "dnsliar-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
redis = {version = "0.22.3", features = ["aio", "tokio-comp", "connection-manager"]}
serde = {version = "1.0.152", features = ["derive"]}
serde_json = {version = "1.0.91", features = ["std"]}
smallvec = "1.10.0"
thiserror = "1.0.38"
tokio = {version = "1.25.0", features = ["macros", "rt-multi-thread"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
trust-dns-client = "0.22.0"
trust-dns-proto = "0.22.0"
trust-dns-resolver = "0.22.0"
trust-dns-server = "0.22.0"
