[package]
name = "dnsliar-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6.0"
async-trait = "0.1.67"
futures-util = "0.3.26"
lazy_static = "1.4.0"
redis = {version = "0.22.3", features = ["aio", "tokio-comp", "connection-manager"]}
serde = {version = "1.0.157", features = ["derive"]}
serde_json = {version = "1.0.94", features = ["std"]}
signal-hook = "0.3.15"
signal-hook-tokio = {version = "0.3.1", features = ["futures-v0_3"]}
smallvec = "1.10.0"
tokio = {version = "1.26.0", features = ["macros", "rt-multi-thread"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
trust-dns-client = "0.22.0"
trust-dns-proto = "0.22.0"
trust-dns-resolver = "0.22.0"
trust-dns-server = "0.22.0"
