[workspace]
members = ["tools/redis-ctl"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[package]
name = "dnsblrsd"
version.workspace = true
edition.workspace = true

[features]
misp = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
futures-util = "0.3.31"
hickory-client = { git = "https://github.com/Tibso/hickory-dns.git", rev = "a206314" }
hickory-proto = { git = "https://github.com/Tibso/hickory-dns.git", rev = "a206314", features = ["dnssec", "dnssec-ring"] }
hickory-resolver = { git = "https://github.com/Tibso/hickory-dns.git", rev = "a206314" }
hickory-server = { git = "https://github.com/Tibso/hickory-dns.git", rev = "a206314" }
redis = { version = "0.32.5", features = ["aio", "tokio-comp", "connection-manager"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["std"] }
serde_norway = "0.9.42"
signal-hook = "0.3.18"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
time = "0.3.41"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
