[package]
name = "dnsblrsd"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.7.1"
async-trait = "0.1.87"
futures-util = "0.3.31"
hickory-client = { git = "https://github.com/Tibso/hickory-dns.git" }
hickory-proto = { git = "https://github.com/Tibso/hickory-dns.git", features = ["dnssec", "dnssec-ring"] }
hickory-resolver = { git = "https://github.com/Tibso/hickory-dns.git" }
hickory-server = { git = "https://github.com/Tibso/hickory-dns.git" }
redis = { version = "0.27.6", features = ["aio", "tokio-comp", "connection-manager"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["std"] }
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
