[package]
name = "redis-ctl"
version = "1.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = {version = "4.5.4", features = ["derive"]}
redis = {version = "0.25.3", features = ["aio", "tokio-comp", "connection-manager"]}
reqwest = {version = "0.12.4", features = ["blocking"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = {version = "1.0.117", features = ["std"]}

[lints.clippy]
pedantic = "warn"
nursery = "warn"
#perf = "warn"
#complexity = "warn"
#suspicious = "warn"
#correctness = "warn"
all = "warn"
cargo = "warn"
str_to_string = "warn"
