[package]
name = "redis-ctl"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dnsblrsd = { path = "../../" }
clap = {version = "4.5.40", features = ["derive"]}
redis = {version = "0.30.0", features = ["aio", "tokio-comp", "connection-manager"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = {version = "1.0.140", features = ["std"]}
serde_norway = "0.9.42"
time = "0.3.41"
